--- a/code/index.html
+++ b/code/index.html
@@ -12,12 +12,14 @@
 <body>
 
 
-    <p><button onclick="animation1()">Animation1</button></p>
-        <div id="animate"></div>
+    <nav>
+        <button id="start" onclick="changeColor();myPlayFunction()">Play</button>
+        <button onclick="myPauseFunction();changeColorpause()">Pause</button>
+        <h1>Animation 1</h1>
+        <p>
+    </nav>
 
-
-    <p><button onclick="animation2()">Animation2</button></p>
-        <div id="animate2"></div>
+    <div id="myDIV"></div>
 
 
 </body>
