--- a/code/index.html
+++ b/code/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <title>Animation</title>
+
+<audio id="effect1" src="/code/effect.wav"></audio>
+
 </head>
 
 <body>
 
 
     <nav>
-        <button id="start" onclick="changeColor();myPlayFunction()">Play</button>
-        <button onclick="myPauseFunction();changeColorpause()">Pause</button>
+        <button type="button" id="start1" onclick="changeColor1();myPlayFunction1();playaudio()">Play</button>
+        <button onclick="myPauseFunction1();changeColorpause1();pauseaudio()">Pause</button>
+        <button onclick="restart1();pauseaudio()">Restart</button>
         <h1>Animation 1</h1>
         <p>
     </nav>
 
-    <div id="myDIV"></div>
+    <div id="animation1" class="animation1"></div>
 
 
-</body>
-
-</html>
+</body></html>
